--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
     <footer>
 
-        <img src="hostinger-logo.png" alt="hostinger-logo">
+        <img src="Hostinger-logo.png" alt="hostinger-logo">
         <section class="footer">
             <div class="leftfooter">
                 <p>We are a web hosting provider on a mission to bring success to everyone who goes online.
