--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--landing page layout -->
     <section class="landingPage">
         <header class="navigationbar">
             <img src="Hostinger-logo.png" alt="Hostinger" id="logo">
@@ -55,6 +56,7 @@
 
         <i class="fa-solid fa-bars menubar" onclick="menubar()"></i>
 
+<!--         responsive navbar for smaller screen -->
         <nav class="sidebar" id="sidebar">
             <ul>
                 <li><a href="#" onclick="sideshow1()">Hosting <i class="fa-solid fa-angle-up"></i> </a>
@@ -90,6 +92,7 @@
             <button id="cart2"> <i class="fa-solid fa-cart-shopping"></i> Cart</button>
             <i class="fa-solid fa-xmark" onclick="cross()"></i>
         </nav>
+<!--         content of landing page -->
         <section class="landpage">
             <div class="leftside">
                 <h1>Savings to Set Your Website in Motion</h1>
